# Event-Manager-LEV

./: .angular-cli.json  .gitignore  CMakeLists.txt  README.md  city_parser.h  main.cpp  package-lock.json  package.json  pom.xml  pub_parser.h
app/: app.module.ts  app.routing.ts
app/landing/: landing.component.html
cmake/: FindOsmium.cmake
src/: index.html  style.css
src/app/: app.component.ts  app.module.ts  app.routing.ts
src/app/admin/: admin.component.ts  admin.module.ts
src/app/admin/admin-events/: admin-events.component.css  admin-events.component.html  admin-events.component.ts
src/app/admin/admin-events/edit/: admin-events-edit.component.html  admin-events-edit.component.ts
src/app/admin/admin-frame/: admin-frame.component.css  admin-frame.component.html  admin-frame.component.ts
src/app/admin/admin-locations/: admin-locations.component.html  admin-locations.component.ts
src/app/admin/admin-login/: admin-login.component.css  admin-login.component.ts
src/app/admin/admin-performers/: admin-performers.component.html  admin-performers.component.ts
src/app/admin/admin-performers/admin-perfomers-edit/: admin-perfomers-edit.component.css  admin-perfomers-edit.component.html  admin-perfomers-edit.component.ts
src/app/admin/guards/: admin-inverse.guard.ts  admin.guard.ts  index.ts
src/app/frame/: frame.component.html  frame.component.ts
src/app/frame/frame-detail/: frame-detail.component.css  frame-detail.component.html  frame-detail.component.ts
src/app/frame/frame-event/: frame-event.component.html  frame-event.component.ts
src/app/frame/frame-home/: frame-home.component.css  frame-home.component.html  frame-home.component.ts
src/app/frame/frame-login/: frame-login.component.html  frame-login.component.ts
src/app/frame/frame-performer/: frame-performer.component.html  frame-performer.component.ts
src/app/frame/frame-register/: frame-register.component.ts
src/app/home/: home.component.html  home.component.ts
src/app/interceptors/: mock.interceptor.ts  token.interceptor.ts
src/app/model/: event.ts  eventObject.ts  index.ts  location.ts  performerObject.ts  user.ts
src/app/service/: event.service.ts  index.ts  location.service.ts  performer.service.ts  user.service.ts
src/assets/css/: main.css
src/assets/js/: jquery.sticky.js  script.js
src/environments/: environment.prod.ts  environment.ts
src/main/java/com/r0lex/eventmanager/: EventManagerApplication.java
src/main/java/com/r0lex/eventmanager/config/: ApplicationConfig.java  AuthenticationManager.java  HibernateConfig.java  MongoConfig.java  SecurityConfig.java  (+1 more)
src/main/resources/: application.properties
(+26 files in other folders)
